# Labs-3-semester

./: README.md
Lab-1/: ArraySequence.hpp  CMakeLists.txt  DynamicArray.hpp  Helper.hpp  ISorter.hpp  LinkedList.hpp  ListSequence.hpp  TimeTests.hpp  WorkTests.hpp  main.cpp
Lab-2/: CMakeLists.txt  Dict.hpp  DictNode.hpp  Histogram.hpp  IDictionary.hpp  Keyboard_Tests.hpp  README.md  Sort.hpp  main.cpp  script.py
Lab-2/Histogram/: Dict.hpp  DictNode.hpp  Histogram.hpp  IDictionary.hpp  Sort.hpp
Lab-2/Histogram/histogram_data/: data.txt
Lab-2/Paginator/: Paginator.hpp  PaginatorAutoTest.hpp
Lab-2/Sequence/: LinkedList.hpp  Sequence.hpp
Lab-2/SubExpression/: SubExpression.hpp  SubExpressionTests.hpp
Lab-3/: CMakeLists.txt  main.cpp
Lab-3/Graphs/: DirectedGraph.hpp  Graph.hpp  HelperGraph.hpp  Test.hpp  TestDirectedGraph.hpp  TestGraph.hpp
Lab-3/Matrix/: Dict.hpp  DictNode.hpp  Matrix.hpp
Lab-3/Sequence/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  Sequence.hpp
